--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.15.1",
-    "@mantine/hooks": "7.15.1",
+    "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1"
